# shr-themes

alsa-scenarii-shr/htcdream/: stereoout.state
alsa-scenarii-shr/om-gta02/: gsmhandset.state
e-wm-config-illume-shr/: profile.desktop
e-wm/e-wm-config-illume-shr/: Makefile.am  configure.ac  e.src  module.illume.src
e-wm/e-wm-config-illume2-shr/: Makefile.am  configure.ac  e.src  e_remember_restart.src  exehist.src  module.battery.src  module.clock.src  module.comp.src  module.conf.src  module.elfe.src  module.illume-indicator.src  module.illume-keyboard.src  module.illume-softkey.src  module.illume2.src  profile.desktop
e-wm/e-wm-config-illume2-shr/palm_pre/: e.src  module.battery.src  module.illume-home.src  module.illume-indicator.src
e-wm/e-wm-illume-dict-pl/: Polish.dic
e-wm/e-wm-menu-shr/: applications.menu
e-wm/e-wm-sysactions-shr/: lock.sh  suspend.sh  sysactions.conf
e-wm/e-wm-theme-illume-gry/: bases.edc  bootsplash.edc  clock.edc  gry.edc
e-wm/e-wm-theme-illume-gry/illume-home/: e-module-illume-home.edc
e-wm/e-wm-theme-illume-neo/: bases.edc  battery.edc  bootsplash.edc  build.sh  clock.edc  neo.edc
e-wm/e-wm-theme-illume-neo/illume-home/: e-module-illume-home.edc
e-wm/e-wm-theme-illume-neo/illume-indicator/: build.sh  e-module-illume-indicator.edc
e-wm/e-wm-theme-illume-niebiee/: battery.edc  busycover.edc  busywin.edc  clock.edc  fileman.edc  flaunch.edc  icons.edc  illume-niebiee.edc  kdb.edc  scrollframe.edc  simplelock.edc  slipshelf.edc  syscon.edc  system.edc  windows.edc
e-wm/e-wm-theme-illume-shr/: battery.edc  clock.edc  illume-shr.edc
e-wm/e-wm-theme-illume-shrlogo/: bluetooth.edc  busycover.edc  cfg.edc  flaunch.edc  gsm.edc  illume-shrlogo.edc  slipshelf.edc  slipwin.edc  syscon.edc  wifi.edc
e-wm/e-wm-theme-illume-sixteen/: battery.edc  clock.edc  fileman.edc  illume-sixteen.edc
e-wm/e-wm-theme-sowka/: battery.edc  sowka.edc
elementary/elementary-theme-gry/: gry.edc
elementary/elementary-theme-neo/: neo-0.1.edc  neo-0.2-broken.edc  neo.edc  neo.edj
elementary/elementary-theme-niebiee/: TODO  niebiee.edc
elementary/elementary-theme-o2/: o2.edc
elementary/elementary-theme-sixteen/: sixteen.edc
elementary/elementary-theme-sowka/: sowka.edc
elementary/elementary-theme-sowka/widgets/: bg.edc  button.edc  frame.edc
etk/etk-theme-neo/widgets/: tree.edc
etk/etk-theme-shr/widgets/: entry.edc  tree.edc
frameworkd/frameworkd-config-shr/: frameworkd.conf  rules.yaml
frameworkd/frameworkd-config-shr/a780/: frameworkd.conf  rules.yaml
frameworkd/frameworkd-config-shr/htcdream/: frameworkd.conf  rules.yaml
frameworkd/frameworkd-config-shr/magician/: frameworkd.conf
gtk/e17-lookalike/: gtkrc  gtkspinbutton
gtk/gtk-theme-e17lookalike/: gtkcheckbutton  gtkentry  gtknotebook  gtkrc  gtkscrollbar  gtktreeview
gtk/gtk-theme-neo/: gtkentry  gtktoolbutton  gtktreeview
gtk/neo-theme-gtk-qad/: gtkassistant  gtkcheckbutton  gtkmenu  gtkmenuitem  gtkradiobutton  gtkrc  gtktextview  gtktoolbar
gtk/shr-theme-gtk-e17lookalike/: gtkbutton  gtkcheckbutton  gtkcombobox  gtkentry  gtkmenu  gtkmenuitem  gtknotebook  gtkprogressbar  gtkradiobutton  gtkrc  gtkscale  gtkscrollbar  gtkspinbutton  gtktextview  gtktoolbar  gtktoolbutton  gtktreeview  workarounds
icons/icon-theme-neo/: index.theme
phoneui-shr/phoneui-shr-theme-neo/: call-management.edc  colors.edc  config  contacts.edc  dialer.edc  keypad.edc  messages.edc  neo.edc  neo.edj  notification.edc  phonelog.edc  quick-settings.edc  sim-manager.edc
phoneui-shr/phoneui-shr-theme-niebiee/: .directory  call-management.edc  colors.edc  config  contacts.edc  contacts.edc~  keypad.edc  messages.edc  niebiee.edj  notification.edc  number-icon.svgz  phonelog.edc  quick-settings.edc  styles.edc
phoneui-shr/phoneui-shr-theme-o2/: call-management.edc  colors.edc  config  contacts.edc  icons.edc  keypad.edc  messages.edc  notification.edc  o2.edc  phonelog.edc  quick-settings.edc  sim-manager.edc  styles.edc
phoneui-shr/phoneui-shr-theme-sowka/: colors.edc  config  contacts.edc  dialer.edc  icons.edc  keypad.edc  messages.edc  phonelog.edc  quick-settings.edc  sim-manager.edc  sowka.edc
shr-logo/: license.txt
shr-splash/: Makefile  shr-splash  shr-splash.ppm
shr-splash-theme-dontpanic/: xsplash-vga.ppm
shr-splash-theme-simple/: Makefile  shr-splash.sh
shr-splash/shr-splash-theme-dociswatchingyou/: author  boot.fbz  name  shutdown.fbz  xsplash-vga.ppm
shr-splash/shr-splash-theme-dontpanic/: boot.fbz  shutdown.fbz  xsplash-vga.ppm
shr-splash/shr-splash-theme-handy/: .directory  boot.fbz  name  shutdown.fbz  xsplash-vga.ppm
shr-splash/shr-splash-theme-logo/: author  name  xsplash-vga.ppm
shr-splash/shr-splash-theme-niebiee/: author  boot.fbz  name  shutdown.fbz  xsplash-vga.ppm
shr-splash/shr-splash-theme-openmoko/: name  shutdown.fbz  xsplash-vga.ppm
shr-splash/shr-splash-theme-simple/: boot.fbz  name  shutdown.fbz
shr-splash/shr-splash-theme-tux/: boot.fbz  name  shutdown.fbz  xsplash-vga.ppm
shr-splash/src/: splash-source.xcf
shr-theme-brave/: Makefile.am  configure.ac
shr-theme-brave/elm/: Makefile.am  phoneguiEFL.edc
shr-theme-brave/etk/: Makefile.am
shr-theme-brave/etk/images/: Makefile.am  (+1 more)
(+49 files in other folders)
